--- a/module2_solution/style.css
+++ b/module2_solution/style.css
@@ -1,4 +1,8 @@
-/********** Base styles **********/
+
+* {
+  box-sizing: border-box;
+}
+
 h1 {
   margin-bottom: 15px;
   text-align: center;
@@ -6,78 +10,100 @@ h1 {
 
 p {
   border: 1px solid black;
-  margin-bottom: 15px;
 }
 
 div {
   border: 1px solid black;
-  width : 90%;
-  margin-right: 10px;
-  margin-left: auto;
+  background-color: LightGrey;
   margin-bottom: 15px;
+}
+
+section {
+  width : 100%;
+  height : 200px;
+  clear :right;
 }
 #p1 {
   background-color: Tomato;
   text-align: center;
+  float : right;
   width: 60px;
   height: 25px;
-  margin-top: 0px;
-  float : right;
+  margin-top: 0;
 }
 #p2 {
   background-color: Orange;
   text-align: center;
+  float : right;
   width: 60px;
   height: 25px;
-  margin-top: 0px;
-  float : right;
+  margin-top: 0;
 }
 
 #p3 {
   background-color: DodgerBlue;
   text-align: center;
+  float : right;
   width: 60px;
   height: 25px;
-  margin-top: 0px;
-  float : right;
+  margin-top: 0;
 }
 
-.content1 {
-  clear : right
-}
-
-.content2 {
-  clear : right
-}
-
-.content3 {
-  clear : right
-}
-
-
-#s1 {
-  background-color: LightGrey;
+#content1 {
   padding :  0px 0px 5px 5px;
   text-align: left;
-  width: 300px;
-  height: 200px;
-  float : left;
 }
 
-#s2 {
-  background-color: LightGrey;
+#content2 {
   padding : 0px 0px 5px 5px;
   text-align: left;
-  width: 300px;
-  height: 200px;
-  float : left;
 }
 
-#s3 {
-  background-color: LightGrey;
+#content3 {
   padding : 0px 0px 5px 5px;
   text-align: left;
-  width: 300px;
-  height: 200px;
-  float : left;
-}s
+}
+
+/********** Large devices only **********/
+@media (min-width: 992px) {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+    border: 1px solid black;
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
+}
