--- a/module3_solution/css/styles.css
+++ b/module3_solution/css/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-size: 16px;
   color: #fff;
@@ -9,7 +13,6 @@ h2 {
   font-size: 40px;
   color : black;
   font-family: 'Oxygen', sans-serif;
-  text-align: center;
 }
 
 #block1 {
@@ -75,9 +78,19 @@ h2 {
   font-weight : normal;
 }
 /** HEADER **/
+
+.container {
+  border : none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding : 10px;
+}
+
 #header-nav {
   background-color: LightGrey;
-  height : 75px;
+  /*height : 75px;*/ /* <----- this is it !!!*/
   border-radius: 0;
   border: 0;
 }
@@ -101,7 +114,7 @@ h2 {
   font-weight: bold;
   text-shadow: 1px 1px 1px #222;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   line-height: .75;
 }
 .navbar-brand a:hover, .navbar-brand a:focus {
